# spyglass-dlc

./: .gitignore  README.md  dgramling_dlc.py  dgramling_dlc_centroid.py  dgramling_dlc_cohort.py  dgramling_dlc_model.py  dgramling_dlc_orient.py  dgramling_dlc_pose_estimation.py  dgramling_dlc_position.py  dgramling_dlc_project.py  dgramling_dlc_training.py  dlc_analysis.py  dlc_utils.py  environment.yml  setup.cfg  setup.py
notebooks/: Trodes_Pipeline.ipynb
spyglass_dlc/: __init__.py  dgramling_dlc_centroid.py  dgramling_dlc_cohort.py  dgramling_dlc_model.py  dgramling_dlc_orient.py  dgramling_dlc_pose_estimation.py  dgramling_dlc_position.py  dgramling_dlc_project.py  dgramling_dlc_selection.py  dgramling_dlc_training.py  dgramling_pos_selection.py  dgramling_position.py  dgramling_trodes_centroid.py  dgramling_trodes_position.py  dlc_paths.py  dlc_reader.py  dlc_utils.py
