[metadata]
name = spyglass_dlc
version = 0.1.0.dev0
author = Daniel Gramling
author_email = daniel.gramling@ucsf.edu
description = Position pipeline for incorporation in Spyglass by Loren Frank Lab, UCSF
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LorenFrankLab/spyglass-dlc

[flake8]
max-line-length = 120
max-complexity = 17
exclude =
  .git,
  .tox,
  __pycache__